--- a/styles/style.css
+++ b/styles/style.css
@@ -3,23 +3,34 @@ body{
 }
 
 .card{
+    position: relative;
     width: 150px;
     height: 150px;
     display: inline-block;
+    
+    transform-style: preserve-3d;
+    transition: 8s;
 }
 
 .card_back, .card_front{
     width: 100%;
     height: 100%;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.45);
+    backface-visibility:hidden;
+}
+
+.flip{
+    transform: rotateY(180deg);
 }
 
 .card_front{
     background-color: #101c2c;
+    transform: rotatey(180deg);
 }
 
 .card_back{
