--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
 body{
     font-family: 'Righteous', 'sans-serif';
 }
@@ -37,4 +42,28 @@ body{
     color: #101c2c;
     background-color: #05c3ff;
     font-size: 30px;
+}
+
+#gameOver{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    font-size: 50px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#restart{
+    padding: 20px;
+    font-size: 20px;
+    color:#101c2c;
+    background-color: rgb(0, 255, 98);
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
 }
